# BeyondYourComprehensionFHE

./: .gitignore  BENCHMARK.md  BENCHMARK_RESULTS.md  CMakeLists.txt  CMakeLists_drogon.txt  CONTRIBUTING.md  CTU_PROOF.md  Dockerfile  Dockerfile.v8  LICENSE  README.md  README_UPDATE.md  README_backup.md  api_test.sh  audit_hydra.sh  benchmark.sh  benchmark_full.sh  benchmark_quick.sh  benchmark_smoke.sh  benchmark_tps.sh  benchmark_ultimate.sh  benchmark_watch.sh  build.sh  build_b6hydra.sh  byc_harmonizer.h  byc_helib_bootstrap.h  byc_lattigo_bootstrap.go  check.sh  check_build.sh  check_encrypt_format.sh  clone.sh  clone_repo.sh  compare_fhe.sh  drogon_server.cpp  extract_results.sh  final_test.sh  find_gateway.sh  fix_cmake_quick.sh  install_deps.sh  linker_magic.ld  (+88 more)
benchmarks/: honest_fullstack.cpp
byc_server/: CMakeLists.txt  antimatter_security.h  hydra_gateway.h  main.cpp  main_gateway.cpp  phi_drogon.h  phi_gateway.h  phi_mesh_node.h  test_antimatter  test_antimatter.cpp  test_api_gateway_limited.cpp  test_api_security  test_api_security_enterprise.cpp  test_drogon_threads  test_gateway  test_mesh  test_mesh_node.cpp  test_phi_drogon.cpp
doc/: KNOWN_ISSUES.md  LICENSE_COMPATIBILITY.md
docs/: API_DOCUMENTATION.md  COMPLETE_DOCS.md  SECURITY_AUDIT.md
include/seal/: antimatter.h  batchencoder.h  ciphertext.h  ckks.h  context.h  decryptor.h  dynarray.h  encryptionparams.h  encryptor.h  evaluator.h  fractal_bootstrapper.h  galoiskeys.h  keygenerator.h  kswitchkeys.h  memorymanager.h  mirror_bootstrapper.h  modulus.h  phi_ckks.h  phi_utils.h  plaintext.h  publickey.h  randomgen.h  randomtostd.h  recursive_fhe.h  relinkeys.h  seal.h  secretkey.h  serializable.h  serialization.h  true_bootstrapper.h  unlimited_fhe.h  valcheck.h  version.h
lattigo_test/: main.go
logs/: test_1m_demons.cpp
npm-package/: README.md  index.d.ts  index.js  package.json  test.js
paper/: byc_fhe_iacr_v1.tex  mr_fhe.aux  mr_fhe.tex  truebootstrapper_detailed.aux  truebootstrapper_detailed.tex  truebootstrapper_rigorous_proof.aux  truebootstrapper_rigorous_proof.tex  universal_fhe_unification.aux  universal_fhe_unification.tex
proofs/: COMPLETE_THEOREMS.md  ENGINE_THEOREMS.md  FORMAL_PROOFS.md
src/: antimatter.h  b6_hydra.cpp  byc_server.cpp  drogon_gateway.cpp  drogon_gateway_seal.cpp  fhe_patch.diff  fractal.h  gateway.cpp  hydra_unified.cpp  phickks_gateway.cpp  phiopt_gateway.cpp  phiseal_gateway.cpp  pozd_fhe.h  pozd_server.cpp  pqc.h  supply_chain.h  zkp.h
src/chaos/: cantor_diagonal.h  demon_harmonizer.h  eight_demon_gates.h  fast_math.h  fibonacci_duel.h  godel_incompleteness.h  golden_chaos.h  heisenberg_uncertainty.h  nietzsche_eternal.h  schrodinger_cat.h  turing_halting.h
src/core/: banach_engine.h  femmg_fhe.h  femmg_operations.h  harmonic_engine.h
src/engines/: byc_unified_fractal.h  phi_auto_harmonize.h  phi_bfv_optimized.h  phi_ckks.h  phi_openfhe.h  phi_openfhe_real.h  phi_seal.h  phi_seal_engine.h  phi_tfhe.h  phi_tfhe_real.h  phi_zama.h  unified_engine.h
src/fhe/: multi_recursive_fhe.cpp  multi_recursive_fhe.h
src/layers/: fractal_layer.h
src/pqc/: multi_recursive_pqc.h
src/supply_chain/: multi_engine_scs.h  recursive_fractal_scs.h
src/zkp/: multi_recursive_zkp.h  true_fractal_zkp.h
tests/: test_100m_demons  test_100m_demons.cpp  test_10m_demons  test_10m_demons.cpp  test_1m_demons  test_8gates_10k  test_8gates_10k.cpp  test_catch_me  test_catch_me.cpp  test_eight_demon_gates  test_eight_demon_gates.cpp  test_harmonizer_10k  test_harmonizer_10k.cpp  test_harmonizer_track  test_harmonizer_track.cpp  test_schrodinger  test_schrodinger.cpp  test_select_debug  test_select_debug.cpp
